--- a/html/01-기부-종합.html
+++ b/html/01-기부-종합.html
@@ -284,15 +284,15 @@
   <div class="max-w-[868px] lg:mx-auto mx-7 ">
     <ul class="lg:flex flex-wrap lg:-mx-4">
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">1호</dt>
-            <dd class="pr-6 text-[13px]">1999</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">1호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">이길여</strong>
+                <strong class="text-[32px] mr-2">이길여</strong>
                 <span>가천모성보호기금</span>
               </dt>
               <dd class="font-bold">가천대학교 총장</dd>
@@ -305,15 +305,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">2호</dt>
-            <dd class="pr-6 text-[13px]">1999</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">2호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">장연신</strong>
+                <strong class="text-[32px] mr-2">장연신</strong>
                 <span>장연신기금 / 애경</span>
               </dt>
               <dd class="font-bold">애경그룹 회장</dd>
@@ -324,15 +324,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">3호</dt>
-            <dd class="pr-6 text-[13px]">2000</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">3호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">진양혜·손범수</strong>
+                <strong class="text-[32px] mr-2">진양혜·손범수</strong>
               </dt>
               <dd class="font-bold">방송인</dd>
             </dl>
@@ -344,15 +344,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">4호</dt>
-            <dd class="pr-6 text-[13px]">2003</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">4호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">신창재</strong>
+                <strong class="text-[32px] mr-2">신창재</strong>
               </dt>
               <dd class="font-bold">교보생명 회장</dd>
             </dl>
@@ -364,15 +364,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">5호</dt>
-            <dd class="pr-6 text-[13px]">2011</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">5호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">故 박영숙</strong>
+                <strong class="text-[32px] mr-2">故 박영숙</strong>
               </dt>
               <dd class="font-bold">한국여성재단 초대 이사장<br>
                 아시아위민브릿지 두런두런 前 이사장</dd>
@@ -385,15 +385,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">6호</dt>
-            <dd class="pr-6 text-[13px]">2014</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">6호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">조형</strong>
+                <strong class="text-[32px] mr-2">조형</strong>
               </dt>
               <dd class="font-bold">한국여성재단 前 이사장<br>
                 미래포럼 前 이사장</dd>
@@ -406,15 +406,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">7호</dt>
-            <dd class="pr-6 text-[13px]">2019</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">7호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">양희은</strong>
+                <strong class="text-[32px] mr-2">양희은</strong>
               </dt>
               <dd class="font-bold">가수</dd>
             </dl>
@@ -426,15 +426,15 @@
         </div>
       </li>
       <li class="lg:px-4 lg:w-1/3 lg:mb-16 mb-10">
-        <div class="w-full h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6ae5104adfc7d.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
-          <dl class="flex justify-between items-center">
-            <dt class="w-[86px] h-[86px] text-[15px] font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/d149fe84658a2.png')] bg-cover bg-no-repeat">8호</dt>
-            <dd class="pr-6 text-[13px]">2019</dd>
+        <div class="w-[268px] h-[368px] mx-auto lg:mx-0 lg:w-full lg:h-full pb-12 text-white bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/2ae5f51099533.png')] bg-cover bg-no-repeat rounded-2xl overflow-hidden">
+          <dl class="flex justify-between items-center px-6 pt-6 pb-2">
+            <dt class="w-[40px] h-[40px] text-base font-bold flex justify-center items-center bg-[url('https://cdn.imweb.me/upload/S202205122b1ec895efdd4/6b5214283a0da.png')] bg-cover bg-no-repeat">8호</dt>
+            <dd><img class="!m-0 w-10" src="https://cdn.imweb.me/upload/S202205122b1ec895efdd4/f54409284d700.png" alt=""></dd>
           </dl>
           <div class="px-6">
-            <dl class="text-[13px] mb-14">
+            <dl class="text-[13px] mb-8">
               <dt class="mb-1 flex items-baseline">
-                <strong class="text-2xl mr-2">정려원</strong>
+                <strong class="text-[32px] mr-2">정려원</strong>
               </dt>
               <dd class="font-bold">배우</dd>
             </dl>
